1.8.5
-----
1. Fix compile against Gtk2 older than 2.20
2. Remove some Gtk3 hacks.

1.8.4
-----
1. Fix issues with image based backgrounds.
2. Don't start drag on widget tab labels.
3. Don't remove mouse over colour for pressed combo buttons.
4. Use gtk_rc_parse_string to hide shortcuts, and not GtkSettings
5. Fix KDE style non-editable combos which have has-frame set to FALSE.

1.8.3
-----
1. Better fix for problems with Pidgin's tabs and window dragging.
2. Fix crash when using background gradients/images and built using 'Release'
   build type.
3. Fix titles in GIMP's preferences dialog.

1.8.2
-----
 1. Improve window drag code to take care of GtkPizza, and other, widgets.
 2. Use Gdk window to determine offsets when drawing background gradients.
 3. Use SHADOW_IN for treeviews.
 4. Fix background gradients in scrollviews.
 5. When drawing background gradients, use the background colour of the top-level
    widget's style.
 6. Fix slight glitch with striped scrollbar sliders.
 7. Hacky fix for tabs in Thunderbird main window.
 8. Better detection of toolbar buttons in Thunderbird.
 9. Slightly clean-up code.
10. Can only use KDE-style non-editable combo popup if also using glow focus - as
    Gtk2 modifes the focus rect.
11. Don't recolour checks/radios in listviews when row is selected.

1.8.1
-----
1. Alter CMake linker flags to detect undefined symbols.
2. Fix compile with older Gtk2 versions.

1.8.0
-----
 1. Add option to not display keyboard shortcurt underline until 'Alt' is
    pressed.
 2. Add options to specify appearance of toolbar buttons.
 3. Allow to use popup menu shade factor when colouring as per menubar.
 4. Colour listview arrows on mouse-over.
 5. Fix scrollbar background gradient in flat scrollbar buttons with firefox.
 6. Use windows style scrollbars for Firefox 4
 7. Fix painting of alternate listview rows in SWT apps. For some reason even
    cells are painted twice, once with the correct "cell_XX" setting, and then